tests/bytes/errors/bytes_index_non_int.dby
let b = b"ABC"
print(b["0"])
